<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/difficulty_options"
        android:prompt="@string/select_difficulty" />

    <Spinner
        android:id="@+id/operationSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/difficultySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/operation_options"
        android:prompt="@string/select_operation" />

    <Spinner
        android:id="@+id/questionsSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/question_options"
        android:prompt="@string/question_prompt"
        app:layout_constraintEnd_toEndOf="@+id/operationSpinner"
        app:layout_constraintStart_toStartOf="@+id/operationSpinner"
        app:layout_constraintTop_toBottomOf="@+id/operationSpinner" />

    <Button
        android:id="@+id/saveSelectionsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Save Selections"
        app:layout_constraintEnd_toEndOf="@+id/btn_dashboard_from_math"
        app:layout_constraintStart_toStartOf="@+id/btn_dashboard_from_math"
        app:layout_constraintTop_toBottomOf="@+id/questionsSpinner" />

    <Button
        android:id="@+id/btn_dashboard_from_math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Back to Dashboard"
        app:layout_constraintEnd_toEndOf="@+id/questionsSpinner"
        app:layout_constraintStart_toStartOf="@+id/questionsSpinner"
        app:layout_constraintTop_toBottomOf="@+id/saveSelectionsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>