<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildDashboard">

        <!-- Spelling Game -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/childDashboard_games_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="GAMES"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Clickable Image -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/spellingGameImage"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/spelling_game_image_desc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/spelling_game_image"
                        app:layout_constraintEnd_toEndOf="@+id/childDashboard_spellingScore_value"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_spellingScore_value"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_spellingScore_value" />

                    <TextView
                        android:id="@+id/tv_childDashboard_spellingGame_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Spelling Game"
                        app:layout_constraintEnd_toEndOf="@+id/spellingGameImage"
                        app:layout_constraintStart_toStartOf="@+id/spellingGameImage"
                        app:layout_constraintTop_toBottomOf="@+id/spellingGameImage" />

                    <TextView
                        android:id="@+id/childDashboard_spellingScore_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Spelling Game Score"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/childDashboard_spellingScore_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="@+id/childDashboard_spellingScore_text"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_spellingScore_text"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_spellingScore_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/mathGameImage"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/math_game_image_desc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/math_game_image"
                        app:layout_constraintEnd_toEndOf="@+id/childDashboard_mathScore_value"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_mathScore_value"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_mathScore_value" />

                    <TextView
                        android:id="@+id/tv_childDashboard_mathGame_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Math Game"
                        app:layout_constraintEnd_toEndOf="@+id/mathGameImage"
                        app:layout_constraintHorizontal_bias="0.428"
                        app:layout_constraintStart_toStartOf="@+id/mathGameImage"
                        app:layout_constraintTop_toBottomOf="@+id/mathGameImage" />

                    <TextView
                        android:id="@+id/childDashboard_mathScore_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Math Game Score"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/childDashboard_mathScore_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_mathScore_text"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_mathScore_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/otherActivitiesImage"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/other_activities_image_desc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/other_activities_image"
                        app:layout_constraintEnd_toEndOf="@+id/childDashboard_otherActivitiesScore_value"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_otherActivitiesScore_value"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_otherActivitiesScore_value" />

                    <TextView
                        android:id="@+id/tv_childDashboard_otherActivities_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Other Activities"
                        app:layout_constraintEnd_toEndOf="@+id/otherActivitiesImage"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/otherActivitiesImage"
                        app:layout_constraintTop_toBottomOf="@+id/otherActivitiesImage" />

                    <TextView
                        android:id="@+id/childDashboard_otherActivitiesScore_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Other Activities Score"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/childDashboard_otherActivitiesScore_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/childDashboard_otherActivitiesScore_text"
                        app:layout_constraintTop_toBottomOf="@+id/childDashboard_otherActivitiesScore_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/childDashboard_totalGamesScore_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/childDashboard_totalScore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="Total Games Score:"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/childDashboard_totalScore_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Text Box -->



        <!-- Similar layouts for Math Game, Typing Game, and Reading Game -->



